fix spacing

--- a/src/components/BlogHeader/styles.css
+++ b/src/components/BlogHeader/styles.css
@@ -14,6 +14,7 @@
 @media (width <= 992px) {
     #top-section {
         padding: 25px 5%;
+        margin-top: 3rem;
     }
 }
 
