--- a/src/components/Recommendation/styles.css
+++ b/src/components/Recommendation/styles.css
@@ -13,3 +13,15 @@
         padding: 0 5% !important;
     }
 }
+
+@media (width <= 578px) {
+    #recommendation-section .card-img-top {
+        height: 280px;
+   }
+}
+
+@media (width <= 350px) {
+    #recommendation-section .card-img-top {
+        height: 200px;
+   }
+}
